# cot

./: CMakeLists.txt
cpp/: CMakeLists.txt
cpp/src/: Codegen.cpp  Scanner.h
cpp/test/: arrays.ac  casts.ac  errors.ac  for_loop.ac  hello.ac  ifelse.ac  lit.cfg.py  optionals.ac  slices.ac  while.ac
rust/: Cargo.toml
rust/src/: codegen.rs  main.rs  parser.rs  scanner.rs
src/: Codegen.cpp  Codegen.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  main.cpp
test/: arithmetic.ac  arrays.ac  enums.ac  generics.ac  hello.ac  ifelse.ac  match.ac  pointers.ac  struct_fields.ac  structs.ac  variables.ac  while.ac
