[package]
name = "cot"
version = "0.1.0"
edition = "2021"
description = "cot — compiler for the ac language"

[[bin]]
name = "cot"
path = "src/main.rs"

[dependencies]
mlif = { workspace = true, features = ["codegen"] }
cot-dev = { path = "../../cot-dev/rust" }
cot-arith = { path = "../../core/arith/rust" }
cot-memory = { path = "../../core/memory/rust" }
cot-flow = { path = "../../core/flow/rust" }
